@@ -201,7 +201,7 @@ execute <- function(cmd, args, std_out, std_err, std_in, wait, timeout){
   stopifnot(is.character(cmd))
   if(.Platform$OS.type == 'windows'){
     if(!inherits(cmd, 'AsIs'))
-      cmd <- to_shortpath(cmd)
+      cmd <- utils::shortPathName(path.expand(cmd))
     if(!inherits(args, 'AsIs'))
       args <- windows_quote(args)
   }
@@ -210,11 +210,4 @@ execute <- function(cmd, args, std_out, std_err, std_in, wait, timeout){
   if(length(std_in) && !is.logical(std_in)) # Only files supported for stdin
     std_in <- enc2utf8(normalizePath(std_in, mustWork = TRUE))
   .Call(C_execute, cmd, argv, std_out, std_err, std_in, wait, timeout)
-}
-
-to_shortpath <- function(path){
-  out <- Sys.which(path.expand(path))
-  if(nchar(out))
-    return(out)
-  return(path)
 }
