@@ -1,4 +1,5 @@
 3.1
+  - Windows: run programs through utils::shortPathName()
   - Skip a unit test if the 'whoami' program is not available
 
 3.0
